# gnome-mcp-server

./: .typos.toml  Cargo.toml  README.md  deny.toml  gnome-mcp-config.example.json
.github/workflows/: ci.yml
src/: config.rs  main.rs
src/gnome/: evolution.rs  mod.rs
src/gnome/evolution/: contact.rs  event.rs  mod.rs  task.rs
src/mcp/: macros.rs  mod.rs  params.rs  server.rs  types.rs
src/resources/: applications.rs  audio.rs  calendar.rs  contacts.rs  mod.rs  system_info.rs  tasks.rs
src/tools/: applications.rs  audio.rs  keyring.rs  mod.rs  notifications.rs  open_file.rs  quick_settings.rs  screenshot.rs  wallpaper.rs  window_management.rs
