[package]
name = "gnome-mcp-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
calcard = "0.1"
chrono = "0.4"
gio = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zbus = "5.0"
