[package]
name = "gnome-mcp-server"
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.80"

[dependencies]
anyhow = "1.0"
ashpd = "0.11"
calcard = "0.1"
chrono = { version = "0.4", features = ["serde"] }
gio = "0.20"
oo7 = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zbus = "5.0"
